--- a/config/config.json
+++ b/config/config.json
@@ -28,7 +28,7 @@
   },
   "refreshInterval": 60,
   "nameOfQuery": {
-    "dfd": "dfd ",
+    "dfd": "dfd v",
     "json_devices": "json_devices_v2",
     "incidents": "select * from(select CREATIONDATE, TICKETID, DESCRIPTION, REPORTEDBY, INCIDENT.INTERNALPRIORITY,row_number() over (order by CREATIONDATE desc) rn from INCIDENT order by CREATIONDATE DESC) where rn <=20"
   }
