--- a/config/config.json
+++ b/config/config.json
@@ -31,5 +31,12 @@
     "json_devices": "json_devices_v2",
     "incidents": "select * from(select CREATIONDATE, TICKETID, DESCRIPTION, REPORTEDBY, INCIDENT.INTERNALPRIORITY,row_number() over (order by CREATIONDATE desc) rn from INCIDENT order by CREATIONDATE DESC) where rn <=20",
     "ping_time": "select * from portal_ncim_metric"
+  },
+  "netcool": {
+    "host": "10.30.1.16",
+    "port": "8080",
+    "path": "/objectserver/restapi/alerts/status",
+    "login": "webgui",
+    "password": "netcool"
   }
 }
